--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -10,13 +10,11 @@
   {{> head}}
     <div class="row">
     {{#if user}}
-    <p>Welcome to the nayar dashboard, {{user.username}}. From here you can view, add,
-    edit, and delete Layar layers and their POIs and associated objects,
-    animations, actions, and transforms.</p>
-    <a href="/layers/">Layers</a>
+    <p>Welcome to the nayar dashboard, {{user.username}}. From here you can view, add, edit, and delete Layar layers and their POIs and associated objects, animations, actions, and transforms.</p>
+    <a href="/layers/">Layers</a>{{#ifeq user.role "admin"}} | <a href="/users/">Users</a>{{/ifeq}}
     {{else}}
     <p>Welcome to the nayar dashboard. <a href="/login">Login</a> or
-      <a href="/register">register</a> a user to create and view layers.</p>
+      <a href="/register">Register</a> a user to create and view layers.</p>
     {{/if}}
     </div>
   {{> foot}}
