--- a/app/templates/layer.hbs
+++ b/app/templates/layer.hbs
@@ -17,27 +17,48 @@
       <button id="top-save" class="save-button">
             <i class="fa fa-floppy-o"></i> Save
       </button>
+    </div>
     <form id='update' method="post" action="/layer/{{layer.id}}">
-      <label>ID</label>
-      <p>{{layer.id}}</p>
-      <label>Layer Name</label>
-      <input type="text" name="layer" value="{{layer.layer}}"/>
-      <label>Refresh Interval</label>
-      <input type="number" name="refreshInterval" value="{{layer.refreshInterval}}"/>
-      <label>Full Refresh</label>
-      <input type="checkbox" name="fullRefresh" {{#if layer.fullRefresh}}checked{{/if}}/>
-      <label>Message</label>
-      <input type="text" name="showMessage" value="{{layer.showMessage}}"/>
-      <label>POI Type</label>
-      <select name="poiType"/>
-        {{#if layer.poiType.geo}}
-        <option value="geo" selected>geo</option>
-        <option value="vision">vision</option>
-        {{else if layer.poiType.vision}}
-        <option value="geo">geo</option>
-        <option value="vision" selected>vision</option>
-        {{/if}}
-      </select>
+      <div class="row">
+        <div class="row">
+          <div class="two columns">
+            <label>ID</label>
+            <p>{{layer.id}}</p>
+          </div>
+          <div class="ten columns">
+            <label>Layer Name</label>
+            <input class="u-full-width" type="text" name="layer" value="{{layer.layer}}"/>
+          </div>
+        </div>
+        <div class="row">
+          <div class="eight columns">
+            <label>Refresh Interval</label>
+            <input class="u-full-width" type="number" name="refreshInterval" value="{{layer.refreshInterval}}"/>
+          </div>
+          <div class="four columns">
+            <label>Full Refresh</label>
+            <input type="checkbox" name="fullRefresh" {{#if layer.fullRefresh}}checked{{/if}}/>
+          </div>
+        </div>
+        <div class="row">
+          <div class="eight columns">
+            <label>Message</label>
+            <input class="u-full-width" type="text" name="showMessage" value="{{layer.showMessage}}"/>
+          </div>
+          <div class="four columns">
+            <label>POI Type</label>
+            <select class="u-full-width" name="poiType"/>
+            {{#if layer.poiType.geo}}
+            <option value="geo" selected>geo</option>
+            <option value="vision">vision</option>
+            {{else if layer.poiType.vision}}
+            <option value="geo">geo</option>
+            <option value="vision" selected>vision</option>
+            {{/if}}
+          </select>
+          </div>
+        </div>
+      </div>
     </form>
     <div class="row">
     <h3>POIs</h3>
@@ -87,6 +108,6 @@
           <i class="fa fa-floppy-o"></i> Save
     </button>
     </div>
-    </div>
+
   {{> foot}}
 </html>
