--- a/app/templates/partials/head.html
+++ b/app/templates/partials/head.html
@@ -12,5 +12,5 @@
 <body>
   <div class="container">
     <div class="row">
-      <h1>nayar</h1>
+      <a id="return-link" href="/"><h1>nayar</h1></a>
     </div>
