--- a/app/templates/help.hbs
+++ b/app/templates/help.hbs
@@ -10,11 +10,12 @@
   {{> head}}
     <div class="row">
     <h4>Version</h4>
-      <p>1.1</p>
+      <p>1.1.2</p>
     <h4>Recent Changes</h4>
     <ul>
+      <li>Improved error handling. If a database error occurs, the message will propagate up to the user with a helpful error code that can help diagnose the problem.</li>
       <li>Improved stability</li>
-      <li>User system - first user is admin, subsequent users are users. Users have elevated privileges, like the ability to see/edit any layer and the ability to delete and activate other users. Regular users can only see their own layers and cannot manage user info.</li>
+      <li>User system - first user is admin, subsequent users are users. Admin has elevated privileges, like the ability to see/edit any layer and the ability to delete and activate other users. Users can only see their own layers and cannot manage user info.</li>
       <li>All forms are now formatted to fit on screen more nicely and be more readable</li>
       <li>This help page now exists, so it won't explode when you click the help link at the bottom of each page.</li>
     </ul>
